# lexocraft

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LexoCraft  Makefile  README.md  bun.lockb  cmake-all  cmake-dev  cmake_install.cmake  compile_commands.json  package-lock.json  package.json
.github/workflows/: cmake-multi-platform.yml
assets/: CATEGORIES.md  add_content.py  fix-text.ts  pull-content.ts  symbols.txt
assets/britannica/: chars.txt  combined.txt  pull-content.ts  pullscript.sh
assets/britannica/texts/: animal.Arctic-tern.txt  animal.Asiatic-black-bear.txt  animal.Beloniformes.txt  animal.Bradybaenidae.txt  animal.Coelurus.txt  animal.Ctenidiobranchia.txt  animal.Japanese-pinecone-fish.txt  animal.Orthonychidae.txt  animal.Pacific-tarpon.txt  animal.Piecing-Me-Together.txt  animal.Polynesian-tattler.txt  animal.Thyreocoris-pulicarius.txt  animal.Tibetan-gazelle.txt  animal.beef-tapeworm.txt  animal.black-panther-mammal.txt  animal.black-widow-spider.txt  animal.blue-winged-teal.txt  animal.book-scorpion.txt  animal.bumblebee.txt  animal.bushy-tailed-opossum.txt  animal.chipping-sparrow.txt  animal.crested-quetzal.txt  animal.cricket-frog.txt  animal.fringe-lipped-bat.txt  animal.froghopper.txt  animal.giant-flying-squirrel-genus.txt  animal.grape-phylloxera.txt  animal.gribble.txt  animal.harlequin-cabbage-bug.txt  animal.harrier-bird.txt  animal.heterostracan.txt  animal.huntsman-spider.txt  animal.long-spined-sea-urchin.txt  animal.monito-del-monte.txt  animal.mountain-quail.txt  animal.painted-quail.txt  animal.pelican.txt  animal.phasmid.txt  animal.ruddy-shelduck.txt  animal.sand-tiger-shark-fish-family.txt  (+959 more)
assets/texts/: text_0.txt  text_1.txt  text_10.txt  text_11.txt  text_12.txt  text_13.txt  text_14.txt  text_15.txt  text_16.txt  text_17.txt  text_18.txt  text_19.txt  text_2.txt  text_20.txt  text_21.txt  text_22.txt  text_23.txt  text_24.txt  text_25.txt  text_26.txt  text_27.txt  text_28.txt  text_29.txt  text_3.txt  text_30.txt  text_31.txt  text_32.txt  text_33.txt  text_34.txt  text_35.txt  text_36.txt  text_37.txt  text_38.txt  text_39.txt  text_4.txt  text_40.txt  text_41.txt  text_42.txt  text_43.txt  text_44.txt  (+27 more)
assets/wikipedia/: combined.txt
assets/wikipedia/texts/: text_0.txt  text_1.txt  text_10.txt  text_16.txt  text_18.txt  text_2.txt  text_21.txt  text_26.txt  text_27.txt  text_28.txt  text_29.txt  text_30.txt  text_31.txt  text_32.txt  text_33.txt  text_43.txt  text_44.txt  text_48.txt  text_50.txt  text_53.txt  text_54.txt  text_55.txt  text_6.txt  text_60.txt  text_64.txt  text_66.txt  text_9.txt
cmake/: libs.cmake  opts.cmake
src/: main.cpp  pull-content.ts
src/lexocraft/: CMakeLists.txt  LexoCraft  Makefile  cereal_annoy_index.hpp  cereal_eigen.hpp  cmake_install.cmake  fancy_eigen_print.hpp  main.cpp
src/lexocraft/llm/: CMakeLists.txt  context_builder.hpp  grammar.cpp  grammar.hpp  lexer.cpp  lexer.hpp  llm.hpp  surface_analysis.hpp  text_completion.cpp  text_completion.hpp  text_completion_interface.cpp  text_completion_interface.hpp  text_completion_nn.cpp  text_completion_training.cpp  text_completion_training.hpp  vector_database.cpp  vector_database.hpp
src/lexocraft/neural_network/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lib.cpp  neural_network.cpp  neural_network.hpp  neural_network_diff.cpp  nn.cpp  nn.hpp
src/lexocraft/neural_network/include/: lib.hpp
tests/: CMakeLists.txt  annoy_serialize.cpp  create_text_completer.cpp  eigen_serialize.cpp  neural_network_compute.cpp  neural_network_serialization.cpp  nn_ostream.cpp  passage_tokenization.cpp  template.cpp  test1.cpp  text_completion.cpp  text_prediction.cpp  train_text_completer.cpp  tsl_robin_map.cpp  vector_database.cpp  vector_database_search.cpp  vector_database_serialization.cpp  vector_database_synonyms.cpp  vector_subdatabases.cpp  word_vector_comparison.cpp
